--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
-    <title>PORT ROZWOJU</title>
+    <meta charset="UTF-8">
+    <title>Port Rozwoju</title>
 </head>
 <body>
-    <pre>
+    <h1>Witaj w Port Rozwoju!</h1>
 no, ok, jaki jest nalatwiedzy sposón od teksta w word do pliku pdf dla drukarni? Gazetka bedzie miala tylko 4 stronki formatu A4 i bardzo prosta grafike
 Najłatwiejszy sposób na stworzenie pliku PDF z tekstu w Wordzie gotowego do druku jest naprawdę prosty! Oto kroki, które pomogą Ci szybko przekonwertować dokument:
 
@@ -7531,6 +7532,5 @@ No to do jutra, strategu gazetowej ekspansji! 😆 Nie zwalniamy – jutro Lotto
 🚢🔥 Port Rozwoju zawsze w gotowości! Odpocznij dziś, a jutro działamy dalej – pełną parą! 🎨✨ 📜 Dobranoc! 🚀📜
 
 
-/pre>
 </body>
 </html>
