--- a/index.html
+++ b/index.html
@@ -31,42 +31,56 @@
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/> 
                 </svg>                 
             </button>             
-            <h1 style="font-family: 'Libre Baskerville', serif; font-size: 20px; text-transform: uppercase;">gdański&nbsp;<img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf">&nbsp;reporter</h1> 
+            <h1 style="font-family: 'Libre Baskerville', serif; font-size: 26px; text-transform: uppercase;">gdański&nbsp;<img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf">&nbsp;reporter</h1> 
         </header>         
         <nav class="main-nav"> 
             <ul> 
-                <li><a href="#standpunkt" style="font-family: 'Oswald', sans-serif;">STANDPUNKT</a>
+                <li>
+                    <a href="#standpunkt" style="font-family: 'Oswald', sans-serif;">STANDPUNKT</a>
                 </li>                 
-                <li><a href="#prawo" style="font-family: 'Oswald', sans-serif;">PRAWO</a>
+                <li>
+                    <a href="#prawo" style="font-family: 'Oswald', sans-serif;">PRAWO</a>
                 </li>                 
-                <li><a href="#lokalnie">LOKALNIE</a>
+                <li>
+                    <a href="#lokalnie">LOKALNIE</a>
                 </li>                 
-                <li><a href="#dobrze-na-dzis">DOBRZE NA DZIŚ</a>
+                <li>
+                    <a href="#dobrze-na-dzis">DOBRZE NA DZIŚ</a>
                 </li>                 
-                <li><a href="#obywatele-nie-pl">OBYWATELE NIE PL</a>
+                <li>
+                    <a href="#obywatele-nie-pl">OBYWATELE NIE PL</a>
                 </li>                 
-                <li><a href="#kartka-z-historii">KARTKA Z HISTORII</a>
+                <li>
+                    <a href="#kartka-z-historii">KARTKA Z HISTORII</a>
                 </li>                 
-                <li><a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li>
+                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>                 
             </ul>             
         </nav>         
         <div id="menu-overlay"></div>         
         <div id="offcanvas-menu"> 
             <ul> 
-                <li><a href="#standpunkt">STANDPUNKT</a>
+                <li>
+                    <a href="#standpunkt">STANDPUNKT</a>
                 </li>                 
-                <li><a href="#prawo">PRAWO</a>
+                <li>
+                    <a href="#prawo">PRAWO</a>
                 </li>                 
-                <li><a href="#lokalnie">LOKALNIE</a>
+                <li>
+                    <a href="#lokalnie">LOKALNIE</a>
                 </li>                 
-                <li><a href="#dobrze-na-dzis">DOBRZE NA DZIŚ</a>
+                <li>
+                    <a href="#dobrze-na-dzis">DOBRZE NA DZIŚ</a>
                 </li>                 
-                <li><a href="#obywatele-nie-pl">OBYWATELE NIE PL</a>
+                <li>
+                    <a href="#obywatele-nie-pl">OBYWATELE NIE PL</a>
                 </li>                 
-                <li><a href="#kartka-z-historii">KARTKA Z HISTORII</a>
+                <li>
+                    <a href="#kartka-z-historii">KARTKA Z HISTORII</a>
                 </li>                 
-                <li><a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li>
+                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>                 
             </ul>             
         </div>         
@@ -79,7 +93,7 @@
         </div>         
         <div class="main-layout-wrapper"> 
             <div class="main-content"> 
-                <section id="artykul-redakcyjny" class="article"> <a href="#artykul-redakcyjny" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-size: 20px; font-family: 'Libre Baskerville', serif;">STANDPUNKT</h2> <p style="word-break: normal; font-family: 'Merriweather', serif; font-variant: normal; text-transform: none; font-size: 18px; line-height: 1;"><b>Gdański Łabędź czyli o tych, których już nie liczymy.</b>&nbsp;W Londynie właśnie trwa Swan Upping &mdash;  
+                <section id="artykul-redakcyjny" class="article"> <a href="#artykul-redakcyjny" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-size: 22px; font-family: 'Libre Baskerville', serif;">STANDPUNKT</h2> <p style="word-break: normal; font-family: 'Merriweather', serif; font-variant: normal; text-transform: none; font-size: 18px; line-height: 1;"><b>Gdański Łabędź czyli o tych, których już nie liczymy.</b>&nbsp;W Londynie właśnie trwa Swan Upping &mdash;  
 ceremonialne liczenie łabędzi na Tamizie.&nbsp;A Gdańsk?
 Gdańsk kiedyś był inny.  
 Tu to łabędzie liczyły ludzi.  
@@ -87,15 +101,15 @@ Nie wszystkich. ..Odleciały.
 Nie z hałasem. Z echem.  
 Nie z gniewem. Z pamięcią.Może do Schwangau, może do Brabancji,&nbsp;Może do Londynu...</p> <img src="https://i.postimg.cc/qMkJBWh5/sw22.jpg" alt="Obraz Artykułu Redakcyjnego"> </a> 
                 </section>                 
-                <section id="poradnik-prawny" class="article"> <a href="#poradnik-prawny" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-size: 20px; font-family: 'Libre Baskerville', serif; font-weight: bold; font-style: normal; text-decoration: none; text-transform: uppercase;">Prawo</h2> <p style="font-weight: 400; font-family: 'Merriweather', serif; font-size: 18px; line-height: 1; font-variant: normal; text-transform: none; font-style: normal;"><b>Bruderferajna Wileńska &ndash; Gdyńskie NGO &apos;O&apos;, kazus prawno-historyczny</b>.&nbsp;Na wstępie chciałbym serdecznie podziękować autorce książki Bruderferajn za wnikliwą analizę jednego z najbardziej mrocznych rozdziałów historii II RP. Książka wciąga czytelnika w świat mafii, wymuszeń i nielegalnych praktyk.</p> <img src="https://i.postimg.cc/SNN4b8H0/porada-prawna.jpg" alt="Obraz Poradnika Prawnego"> </a> 
+                <section id="poradnik-prawny" class="article"> <a href="#poradnik-prawny" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-size: 22px; font-family: 'Libre Baskerville', serif; font-weight: bold; font-style: normal; text-decoration: none; text-transform: uppercase;">Prawo</h2> <p style="font-weight: 400; font-family: 'Merriweather', serif; font-size: 18px; line-height: 1; font-variant: normal; text-transform: none; font-style: normal;"><b>Bruderferajna Wileńska &ndash; Gdyńskie NGO &apos;O&apos;, kazus prawno-historyczny</b>.&nbsp;Na wstępie chciałbym serdecznie podziękować autorce książki Bruderferajn za wnikliwą analizę jednego z najbardziej mrocznych rozdziałów historii II RP. Książka wciąga czytelnika w świat mafii, wymuszeń i nielegalnych praktyk.</p> <img src="https://i.postimg.cc/SNN4b8H0/porada-prawna.jpg" alt="Obraz Poradnika Prawnego"> </a> 
                 </section>                 
-                <section id="w-trojmiescie" class="article"> <a href="#w-trojmiescie" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-size: 20px; font-family: 'Libre Baskerville', serif; font-weight: bold; font-variant: small-caps; text-transform: uppercase;">lokalnie</h2> <p style="font-family: 'Merriweather', serif; font-size: 18px; line-height: 1;">Jak powstalo Trójmiasto.</p> <img src="https://i.postimg.cc/DZy6wvhz/trojm.jpg" alt="Obraz Trójmiasta"> </a> 
+                <section id="w-trojmiescie" class="article"> <a href="#w-trojmiescie" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-size: 22px; font-family: 'Libre Baskerville', serif; font-weight: bold; font-variant: small-caps; text-transform: uppercase;">lokalnie</h2> <p style="font-family: 'Libre Baskerville', serif; font-size: 18px; line-height: 1;">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p> <img src="https://i.postimg.cc/DZy6wvhz/trojm.jpg" alt="Obraz Trójmiasta"> </a> 
                 </section>                 
-                <section id="dobrze-na-dzis" class="article"> <a href="#dobrze-na-dzis" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 20px; font-weight: bold; text-transform: uppercase;">Dobrze na dziś</h2> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p> <img src="https://i.postimg.cc/3xFxFYM7/sr1.jpg" alt="Obraz Dobrze na dziś"> </a> 
+                <section id="dobrze-na-dzis" class="article"> <a href="#dobrze-na-dzis" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 22px; font-weight: bold; text-transform: uppercase;">Dobrze na dziś</h2> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p> <img src="https://i.postimg.cc/3xFxFYM7/sr1.jpg" alt="Obraz Dobrze na dziś"> </a> 
                 </section>                 
-                <section id="kartka-z-historii" class="article"> <a href="#kartka-z-historii" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 20px; font-weight: bold; text-transform: uppercase;">obywateli nie pl</h2> <p style="font-family: 'Merriweather', serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p> <img src="https://i.postimg.cc/hGynjGmy/oskar-o.jpg" alt="Obraz Kartki z Historii"> </a> 
+                <section id="kartka-z-historii" class="article"> <a href="#kartka-z-historii" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 22px; font-weight: bold; text-transform: uppercase;">obywateli nie pl</h2> <p style="font-family: 'Merriweather', serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p> <img src="https://i.postimg.cc/hGynjGmy/oskar-o.jpg" alt="Obraz Kartki z Historii"> </a> 
                 </section>                 
-                <section id="cudzoziemcy-w-trojmiescie" class="article"> <a href="#cudzoziemcy-w-trojmiescie" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 20px; font-weight: bold; text-transform: uppercase;">kartka z historii</h2> <p style="font-family: 'Merriweather', serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p> <img src="https://i.postimg.cc/gjpgbV0f/cud1-web.jpg" alt="Obraz Cudzoziemcy w Trójmieście"> </a> 
+                <section id="cudzoziemcy-w-trojmiescie" class="article"> <a href="#cudzoziemcy-w-trojmiescie" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 22px; font-weight: bold; text-transform: uppercase;">kartka z historii</h2> <p style="font-family: 'Merriweather', serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p> <img src="https://i.postimg.cc/gjpgbV0f/cud1-web.jpg" alt="Obraz Cudzoziemcy w Trójmieście"> </a> 
                 </section>                 
                 <div class="ad-space" style="text-align: center; background: #eee; padding: 20px; margin: 30px 0;"> 
                     Reklama: Tutaj możesz umieścić swoją reklamę
@@ -103,7 +117,7 @@ Nie z gniewem. Z pamięcią.Może do Schwangau, może do Brabancji,&nbsp;Może d
                 <div class="ad-space" style="text-align: center; background: #eee; padding: 20px; margin: 30px 0;"> 
                     Reklama: Twoje miejsce na produkt
 </div>                 
-                <section id="danziger-chronograf" class="article"> <a href="de/chronograf.html" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 20px; font-weight: bold; text-transform: uppercase;">Danziger Chronograf</h2> <p style="text-transform: none; font-family: 'Merriweather', serif; font-size: 18px; line-height: 1;"><b>Triebwagen 8: lebende Gedächtnismaschine der Niederstadt.&nbsp;</b>Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter. Jahrzehnte schon kennt er jeden Winkel &ndash; seit jenem Morgen, da die Allee noch Weidengasse hieß. Im Wagen bebt das Blech, summen die Scheiben. Die Passagiere geraten unversehens in seinen Takt.</p> <img src="https://i.postimg.cc/sDYv2pgT/adan-web.jpg" alt="Obraz Danziger Chronograf"> </a> 
+                <section id="danziger-chronograf" class="article"> <a href="de/chronograf.html" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 22px; font-weight: bold; text-transform: uppercase;">Danziger Chronograf</h2> <p style="text-transform: none; font-family: 'Merriweather', serif; font-size: 18px; line-height: 1;"><b>Triebwagen 8: lebende Gedächtnismaschine der Niederstadt.&nbsp;</b>Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter. Jahrzehnte schon kennt er jeden Winkel &ndash; seit jenem Morgen, da die Allee noch Weidengasse hieß. Im Wagen bebt das Blech, summen die Scheiben. Die Passagiere geraten unversehens in seinen Takt.</p> <img src="https://i.postimg.cc/sDYv2pgT/adan-web.jpg" alt="Obraz Danziger Chronograf"> </a> 
                 </section>                 
                 <!-- New horizontal separator -->                 
                 <div class="section-separator"></div>                 
