--- a/index.html
+++ b/index.html
@@ -35,38 +35,52 @@
         </header>         
         <nav class="main-nav"> 
             <ul> 
-                <li><a href="#standpunkt" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a>
+                <li>
+                    <a href="#standpunkt" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a>
                 </li>                 
-                <li><a href="#prawo" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a>
+                <li>
+                    <a href="#prawo" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a>
                 </li>                 
-                <li><a href="#lokalnie" style="font-size: 12px;">LOKALNIE</a>
+                <li>
+                    <a href="#lokalnie" style="font-size: 12px;">LOKALNIE</a>
                 </li>                 
-                <li><a href="#dobrze-na-dzis" style="font-size: 12px;">DOBRZE NA DZIŚ</a>
+                <li>
+                    <a href="#dobrze-na-dzis" style="font-size: 12px;">DOBRZE NA DZIŚ</a>
                 </li>                 
-                <li><a href="#obywatele-nie-pl" style="font-size: 12px;">OBYWATELE NIE PL</a>
+                <li>
+                    <a href="#obywatele-nie-pl" style="font-size: 12px;">OBYWATELE NIE PL</a>
                 </li>                 
-                <li><a href="#kartka-z-historii" style="font-size: 12px;">KARTKA Z HISTORII</a>
+                <li>
+                    <a href="#kartka-z-historii" style="font-size: 12px;">KARTKA Z HISTORII</a>
                 </li>                 
-                <li><a href="de/chronograf.html" style="font-size: 12px;">DANZIGER CHRONOGRAF</a>
+                <li>
+                    <a href="de/chronograf.html" style="font-size: 12px;">DANZIGER CHRONOGRAF</a>
                 </li>                 
             </ul>             
         </nav>         
         <div id="menu-overlay"></div>         
         <div id="offcanvas-menu"> 
             <ul> 
-                <li><a href="#standpunkt">STANDPUNKT</a>
+                <li>
+                    <a href="#standpunkt">STANDPUNKT</a>
                 </li>                 
-                <li><a href="#prawo">PRAWO</a>
+                <li>
+                    <a href="#prawo">PRAWO</a>
                 </li>                 
-                <li><a href="#lokalnie">LOKALNIE</a>
+                <li>
+                    <a href="#lokalnie">LOKALNIE</a>
                 </li>                 
-                <li><a href="#dobrze-na-dzis">DOBRZE NA DZIŚ</a>
+                <li>
+                    <a href="#dobrze-na-dzis">DOBRZE NA DZIŚ</a>
                 </li>                 
-                <li><a href="#obywatele-nie-pl">OBYWATELE NIE PL</a>
+                <li>
+                    <a href="#obywatele-nie-pl">OBYWATELE NIE PL</a>
                 </li>                 
-                <li><a href="#kartka-z-historii">KARTKA Z HISTORII</a>
+                <li>
+                    <a href="#kartka-z-historii">KARTKA Z HISTORII</a>
                 </li>                 
-                <li><a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li>
+                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>                 
             </ul>             
         </div>         
@@ -85,28 +99,29 @@ Gdańsk kiedyś był inny.
 Tu to łabędzie liczyły ludzi.  
 Nie wszystkich. ..Odleciały.
 Nie z hałasem. Z echem.  
-Nie z gniewem. Z pamięcią.Może do Schwangau, może do Brabancji,&nbsp;Może do Londynu.....Może do Schwangau,  
+Nie z gniewem..Z pamięcią.Może do Schwangau,  
 gdzie łabędź siedzi w herbie..Może do Brabancji,  gdzie wciąż grają marsz Weselny Wagnera &mdash;  
 którego nikt już nie chce słuchać w Gdańsku,  
 bo Wagner nie rozumiał, że tęcza też może iść przez Gdańsk....</p> <img src="https://i.postimg.cc/qMkJBWh5/sw22.jpg" alt="Obraz Artykułu Redakcyjnego"> </a> 
                 </section>                 
-                <section id="poradnik-prawny" class="article"> <a href="#poradnik-prawny" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-size: 14px; font-family: 'Libre Baskerville', serif; font-weight: bold; font-style: normal; text-decoration: none; text-transform: uppercase;">Prawo</h2> <p style="font-weight: 400; font-family: 'Merriweather', serif; font-size: 14px; line-height: 1; font-variant: normal; text-transform: none; font-style: normal;"><b>Bruderferajna Wileńska &ndash; Gdyńskie NGO &apos;O&apos;, kazus prawno-historyczny</b>.&nbsp;Na wstępie chciałbym serdecznie podziękować autorce książki Bruderferajn za wnikliwą analizę jednego z najbardziej mrocznych rozdziałów historii II RP. Książka wciąga czytelnika w świat mafii, wymuszeń i nielegalnych praktyk...Pisząc o takich tematach, warto mieć na uwadze, że &bdquo;technologie mafijne&rdquo;, tak świetnie opisane w książce, mogą być wykorzystywane we współczesnej praktyce przez obywateli, których uczciwość pozostaje wątpliwa. Nawet jeśli takim obywatelem jest prezes.....</p> <img src="https://i.postimg.cc/SNN4b8H0/porada-prawna.jpg" alt="Obraz Poradnika Prawnego"> </a> 
+                <section id="poradnik-prawny" class="article"> <a href="#poradnik-prawny" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-size: 14px; font-family: 'Libre Baskerville', serif; font-weight: bold; font-style: normal; text-decoration: none; text-transform: uppercase;">Prawo</h2> <p style="font-weight: 400; font-family: 'Merriweather', serif; font-size: 14px; line-height: 1; font-variant: normal; text-transform: none; font-style: normal;"><b>Bruderferajna Wileńska &ndash; Gdyńskie NGO &apos;O&apos;, kazus prawno-historyczny</b>.&nbsp;Na wstępie chciałbym serdecznie podziękować autorce książki Bruderferajn za wnikliwą analizę jednego z najbardziej mrocznych rozdziałów historii II RP. Książka wciąga czytelnika w świat mafii, wymuszeń i nielegalnych praktyk...Pisząc o takich tematach, warto mieć na uwadze, że &bdquo;technologie mafijne&rdquo;, tak świetnie opisane w książce, mogą być wykorzystywane we współczesnej praktyce przez obywateli, których uczciwość pozostaje wątpliwa. Nawet jeśli takim obywatelem jest prezes.....</p> <img src="https://i.postimg.cc/QtFL7yXn/bruderferan-online.jpg" alt="Obraz Poradnika Prawnego"> </a> 
                 </section>                 
                 <section id="w-trojmiescie" class="article"> <a href="#w-trojmiescie" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-size: 14px; font-family: 'Libre Baskerville', serif; font-weight: bold; font-variant: small-caps; text-transform: uppercase;">lokalnie</h2> <p style="font-family: 'Merriweather', serif; font-size: 14px; line-height: 1;"><b>Festiwal Kina Plenerowego w Sopocie &ndash; morze, ekran i leżaki.</b>&nbsp;W letnie wieczory, kiedy molo pustoszeje z dziennych turystów, a fale zaczynają mówić ciszej, Plac Przyjaciół Sopotu zamienia się w coś więcej niż deptak &ndash; w kino pod gołym niebem.&nbsp;Repertuar?  
 Kino morskie, podróżnicze i klasyka. Dokumenty o rybakach i opowieści o podróżnikach. W tym tygodniu:  
 &ndash; poniedziałek: &bdquo;Atlantyk&rdquo; (reż. Jan-Willem van Ewijk)  
 &ndash; środa: &bdquo;Głosy z głębin&rdquo; &ndash; film archiwalny o kutrach dalekomorskich  
 &ndash; piątek: &bdquo;Kronika Bałtycka&rdquo; &ndash; przegląd filmów o Trójmieście z lat 1950&ndash;1980  
-&ndash; sobota: &bdquo;Pod pokładem&rdquo; &ndash; dramat współczesny z portu Gdynia</p> <img src="https://i.postimg.cc/DZy6wvhz/trojm.jpg" alt="Obraz Trójmiasta"> </a> 
+&ndash; sobota: &bdquo;Pod pokładem&rdquo; &ndash; dramat współczesny z portu Gdynia</p> <img src="https://i.postimg.cc/fb2PKfyt/kino809535.jpg" alt="Obraz Trójmiasta"> </a> 
                 </section>                 
                 <section id="dobrze-na-dzis" class="article"> <a href="#dobrze-na-dzis" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 14px; font-weight: bold; text-transform: uppercase;">Dobrze na dziś</h2> <p style="font-family: 'Merriweather', serif; font-size: 14px; line-height: 1;"><b>Kaszubska jednodniówka &ndash; smak, widok, powietrze.</b>.Są takie dni w środku sezonu, kiedy trzeba uciec z linii frontu turystycznego. Zostawić Długi Targ, Molo i kolejki do zapiekanek &ndash; i pojechać w głąb. Proponujemy: jednodniowy wypad na Kaszuby. Bez wielkich walizek, bez bookingów, tylko z plecakiem, mapą i głodem.
-Start: Gdańsk Zachodni (przystanek Łostowice Świętokrzyska).    Autobus w kierunku Kościerzyny, najlepiej wsiąść ok. 7:30. Wysiąść w Szymbarku lub Gołubiu.</p> <img src="https://i.postimg.cc/3xFxFYM7/sr1.jpg" alt="Obraz Dobrze na dziś"> </a> 
+Start: Gdańsk Zachodni (przystanek Łostowice Świętokrzyska).    Autobus w kierunku Kościerzyny, najlepiej wsiąść ok. 7:30. Wysiąść w Szymbarku lub Gołubiu.</p> <img src="https://i.postimg.cc/Gm3z5TZk/kaszuby-szymbark-810535.jpg" alt="Obraz Dobrze na dziś"> </a> 
                 </section>                 
-                <section id="kartka-z-historii" class="article"> <a href="#kartka-z-historii" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 14px; font-weight: bold; text-transform: uppercase;">obywateli nie pl</h2> <p style="font-family: 'Merriweather', serif; font-size: 14px; line-height: 1;"><b>Spacer po Langer Groble.&nbsp;Gdańsk, godzina 09:45, poranek mglisty.&nbsp;</b>Idę wolno wzdłuż Langer Groble, wąskiej, brukowanej ulicy prowadzącej ku dawnym spichrzom. Współcześnie ktoś nazwał ją ul. Długą Groblą. Ale ja wiem, co tu było. Tu miał swą siedzibę Polnisches Generalkonsulat, konsulat Rzeczypospolitej Polskiej w Wolnym Mieście.
-Oni myśleli, że to był przyczółek legalny. A ja wiedziałem, że to był przyczułek infiltracyjny... Tu krążyły nazwiska. Tu rozdzielano walizy z dokumentami do Neuteich, słano meldunki koleją do Warszawy. I właśnie stąd... szły rozmowy.Zwyczajne, oficjalne, czyste. Tyle że ja ich słyszałem.<b></b></p> <img src="https://i.postimg.cc/hGynjGmy/oskar-o.jpg" alt="Obraz Kartki z Historii"> </a> 
+                <section id="kartka-z-historii" class="article"> <a href="#kartka-z-historii" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 14px; font-weight: bold; text-transform: uppercase;">obywateli nie pl</h2> <p style="font-family: 'Merriweather', serif; font-size: 14px; line-height: 1;"><b>Spacer po Neugarten, Gdańsk, godzina 09:45, poranek mglisty.&nbsp;</b>Idę wolno wzdłuż&nbsp;Neugarten &ndash; dziś&nbsp;Nowe  Ogrody.
+To nie jest ulica spacerowa. To pas transmisyjny historii.
+Dziś w oknach tylko rolety i kiosk Ruch, parking Komisariatu policji.  Ale ja pamiętam. Tu, przy jednym z narożników tej alei, mieściła się główna siedziba Komisariatu Generalnego Rzeczypospolitej Polskiej w Wolnym Mieście Gdańsku&ndash; instytucja o statusie dyplomatycznym, lecz duszy operacyjnej. Tu krążyły nazwiska. Tu rozdzielano walizy z dokumentami do Neuteich, słano meldunki koleją do Warszawy. I właśnie stąd... szły rozmowy. Zwyczajne, oficjalne, czyste. Tyle że ja ich słyszałem.<b></b></p> <img src="https://i.postimg.cc/QVGkmHcW/reile.png" alt="Obraz Kartki z Historii"> </a> 
                 </section>                 
                 <section id="cudzoziemcy-w-trojmiescie" class="article"> <a href="#cudzoziemcy-w-trojmiescie" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 14px; font-weight: bold; text-transform: uppercase;">kartka z historii</h2> <p style="font-family: 'Merriweather', serif; font-size: 14px; line-height: 1;">J<b>ak powstało Trójmiasto.</b>&nbsp;&nbsp;Jak narodziła się idea Trójmiasta ?  Pomysł  połączenia trzech nadmorskich miast pojawił się tuż po II wojnie światowej kiedy odbudowa regionu wymagała
-zintegrowanego podejścia. W 1945 roku podjęto pierwsze próby administracyjnego scalenia Gdyni Sopotu i Gdańska.&nbsp;Jednak już wcześniej w czasie wojny miasta funkcjonowały jako wspólny organizm. Niemieckie władze zarządzały portami w Gdyni i Gdańsku jako jednym systemem a komunikacja publiczna była koordynowana na całym obszarze.</p> <img src="https://i.postimg.cc/gjpgbV0f/cud1-web.jpg" alt="Obraz Cudzoziemcy w Trójmieście"> </a> 
+zintegrowanego podejścia. W 1945 roku podjęto pierwsze próby administracyjnego scalenia Gdyni Sopotu i Gdańska.&nbsp;Jednak już wcześniej w czasie wojny miasta funkcjonowały jako wspólny organizm. Niemieckie władze zarządzały portami w Gdyni i Gdańsku jako jednym systemem a komunikacja publiczna była koordynowana na całym obszarze.</p> <img src="https://i.postimg.cc/PrC5zSqZ/3city-online.jpg" alt="Trójmiasto"> </a> 
                 </section>                 
                 <div class="ad-space" style="text-align: center; background: #eee; padding: 20px; margin: 30px 0;"> 
                     Reklama: Tutaj możesz umieścić swoją reklamę
@@ -114,7 +129,7 @@ zintegrowanego podejścia. W 1945 roku podjęto pierwsze próby administracyjneg
                 <div class="ad-space" style="text-align: center; background: #eee; padding: 20px; margin: 30px 0;"> 
                     Reklama: Twoje miejsce na produkt
 </div>                 
-                <section id="danziger-chronograf" class="article"> <a href="de/chronograf.html" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 14px; font-weight: bold; text-transform: uppercase;">Danziger Chronograf</h2> <p style="text-transform: none; font-family: 'Merriweather', serif; font-size: 14px; line-height: 1;"><b>Triebwagen 8: lebende Gedächtnismaschine der Niederstadt.&nbsp;</b>Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter. Jahrzehnte schon kennt er jeden Winkel &ndash; seit jenem Morgen, da die Allee noch Weidengasse hieß. Im Wagen bebt das Blech, summen die Scheiben. Die Passagiere geraten unversehens in seinen Takt.Manch einer starrt hinaus: auf Ziegelmauern, auf Brücken, auf Wasser, das immer still war, aber nie teilnahmslos. Wer Orte mit Seele sucht, gerät hier vollends in Bann. Kantige Bürgerhäuser, Kanäle, Brücken &ndash; sie künden von einst pulsierender Handelsmacht. Die Motlau umspielt sie jak eine alte Geliebte. Jeder Stein atmet vergangene Zeit.</p> <img src="https://i.postimg.cc/sDYv2pgT/adan-web.jpg" alt="Obraz Danziger Chronograf"> </a> 
+                <section id="danziger-chronograf" class="article"> <a href="de/chronograf.html" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 14px; font-weight: bold; text-transform: uppercase;">Danziger Chronograf</h2> <p style="text-transform: none; font-family: 'Merriweather', serif; font-size: 14px; line-height: 1;"><b>Triebwagen 8: lebende Gedächtnismaschine der Niederstadt.&nbsp;</b>Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter. Jahrzehnte schon kennt er jeden Winkel &ndash; seit jenem Morgen, da die Allee noch Weidengasse hieß. Im Wagen bebt das Blech, summen die Scheiben. Die Passagiere geraten unversehens in seinen Takt.Manch einer starrt hinaus: auf Ziegelmauern, auf Brücken, auf Wasser, das immer still war, aber nie teilnahmslos. Wer Orte mit Seele sucht, gerät hier vollends in Bann. Kantige Bürgerhäuser, Kanäle, Brücken &ndash; sie künden von einst pulsierender Handelsmacht. Die Motlau umspielt sie jak eine alte Geliebte. Jeder Stein atmet vergangene Zeit.</p> <img src="https://i.postimg.cc/ydxM4rty/tr8-nd.png" alt="Obraz Danziger Chronograf"> </a> 
                 </section>                 
                 <!-- New horizontal separator -->                 
                 <div class="section-separator"></div>                 
