--- a/subpage.html
+++ b/subpage.html
@@ -211,7 +211,7 @@
     }
 
     // Weather Widget Script
-    const OPENWEATHER_API_KEY = ''; // <<< IMPORTANT: Insert your OpenWeatherMap API key here
+    const OPENWEATHER_API_KEY = 'c2da80b5c77fe8468582d577ab206a3f'; // <<< IMPORTANT: Insert your OpenWeatherMap API key here
     const OPENWEATHER_API_URL = 'https://api.openweathermap.org/data/2.5/weather';
 
     async function fetchWeatherData(city, targetIds) {
@@ -303,5 +303,7 @@
       });
     }
   </script>
+  <script sc="https://api.openweathermap.org/data/2.5/weather?q=Gdansk&appid=c2da80b5c77fe8468582d577ab206a3f"></script>
+
 </body>
 </html>
