--- a/stand.html
+++ b/stand.html
@@ -25,23 +25,30 @@
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/> 
                 </svg>                 
             </button>             
-            <!-- Header title and logo as a clickable link to index.html -->             <a href="index.html" class="header-link"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1> </a> 
+            <!-- Header title and logo as a clickable link to index.html -->             <a href="index.html" class="header-link">  <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1>  </a> 
         </header>         
         <nav class="main-nav"> 
             <ul> 
-                <li><a href="stand.html">STANDPUNKT</a>
+                <li>
+                    <a href="stand.html">STANDPUNKT</a>
                 </li>                 
-                <li><a href="prawo.html">PRAWO</a>
+                <li>
+                    <a href="prawo.html">PRAWO</a>
                 </li>                 
-                <li><a href="lokalnie.html">LOKALNIE</a>
+                <li>
+                    <a href="lokalnie.html">LOKALNIE</a>
                 </li>                 
-                <li><a href="dobrze.html">DOBRZE NA DZIŚ</a>
+                <li>
+                    <a href="dobrze.html">DOBRZE NA DZIŚ</a>
                 </li>                 
-                <li><a href="notpl.html">OBYWATELE NIE PL</a>
+                <li>
+                    <a href="notpl.html">OBYWATELE NIE PL</a>
                 </li>                 
-                <li><a href="kartka.html">KARTKA Z HISTORII</a>
+                <li>
+                    <a href="kartka.html">KARTKA Z HISTORII</a>
                 </li>                 
-                <li><a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li>
+                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>                 
             </ul>             
         </nav>         
@@ -49,19 +56,26 @@
         <div id="menu-overlay"></div>         
         <div id="offcanvas-menu"> 
             <ul> 
-                <li><a href="stand.html">STANDPUNKT</a>
+                <li>
+                    <a href="stand.html">STANDPUNKT</a>
                 </li>                 
-                <li><a href="prawo.html">PRAWO</a>
+                <li>
+                    <a href="prawo.html">PRAWO</a>
                 </li>                 
-                <li><a href="lokalnie.html">LOKALNIE</a>
+                <li>
+                    <a href="lokalnie.html">LOKALNIE</a>
                 </li>                 
-                <li><a href="dobrze.html">DOBRZE NA DZIŚ</a>
+                <li>
+                    <a href="dobrze.html">DOBRZE NA DZIŚ</a>
                 </li>                 
-                <li><a href="notpl.html">OBYWATELE NIE PL</a>
+                <li>
+                    <a href="notpl.html">OBYWATELE NIE PL</a>
                 </li>                 
-                <li><a href="kartka.html">KARTKA Z HISTORII</a>
+                <li>
+                    <a href="kartka.html">KARTKA Z HISTORII</a>
                 </li>                 
-                <li><a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li>
+                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>                 
             </ul>             
         </div>         
@@ -77,31 +91,41 @@
                 <div class="ads google article-top-ad"> 
                     <!-- ads google -->                     
                 </div>                 
-                <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Bruderferajna Wileńska &ndash; Gdyńskie NGO &apos;O&apos;. Kazus prawno-historyczny</h1> 
-                <p class="lead" style="font-family: 'Merriweather', serif; font-size: 16x;">Na wstępie chciałbym serdecznie podziękować autorce książki Bruderferajn za wnikliwą analizę jednego z najbardziej mrocznych rozdziałów historii II RP</p> 
-                <p class="author-date">Michael Marmanidi&nbsp;| Data publikacji: 26 lipca 2025</p> 
-                <img src="https://i.postimg.cc/QtFL7yXn/bruderferan-online.jpg?text=Duży+Obraz+Artykułu" alt="Duży obraz artykułu" class="article-main-image"> 
-                <p class="image-caption">Ilustrowany Kuryer Codzienny, zdjęcia złodziei znakujących domy swoim szyfrem: dwa czworoboki zachodzące na siebie oznaczały &apos;nie okradać tego mieszkania</p> 
+                <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Gdański Łabędź, czyli o tych, których już nie liczymy</h1> 
+                <p class="lead" style="font-family: 'Merriweather', serif; font-size: 16px;">W Londynie trwa właśnie Swan Upping &ndash; coroczne liczenie łabędzi na Tamizie.  
+Rytuał z XIII wieku: czerwone mundury, herby na łodziach, królewski gest własności&nbsp;&nbsp;</p> 
+                <p class="author-date">Redakcja| Data publikacji: 26 lipca 2025</p> 
+                <img src="https://i.postimg.cc/qMkJBWh5/sw22.jpg?text=Duży+Obraz+Artykułu" alt="Duży obraz artykułu" class="article-main-image"> 
+                <p class="image-caption">The King&rsquo;s Swan Marker David Barber mit einem seiner Schützlinge Picture Alliance</p> 
                 <div class="article-body"> 
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Na wstępie chciałbym serdecznie podziękować autorce książki Bruderferajn za wnikliwą analizę jednego z najbardziej mrocznych rozdziałów historii II RP. Książka wciąga czytelnika w świat mafii, wymuszeń i nielegalnych praktyk. Niezwykle cenne jest dostrzeganie takich problemów, które &ndash; choć zakorzenione w historii &ndash; wciąż mogą przybierać współczesne formy. Pisząc o takich tematach, warto mieć na uwadze, że &bdquo;technologie mafijne&rdquo;, tak świetnie opisane w książce, mogą być wykorzystywane we współczesnej praktyce przez obywateli, których uczciwość pozostaje wątpliwa. Nawet jeśli takim obywatelem jest prezes gdyńskiego NGO &apos;O&apos;, świadczącego usługi nieodpłatnego poradnictwa prawnego.</p> 
-                    <p>Obawiam się, że nie jestem jedynym, kto z zachwytem przeczytał tę książkę. Istnieje wysokie prawdopodobieństwo, że również prezes wspomnianego NGO odczytał ją z notatnikiem i ołówkiem w ręku, mrucząc pod nosem: &bdquo;Hm... OK.&rdquo; Nie mam na to dowodów, ale nie wykluczam, że kupowaliśmy ją w tym samym Empiku przy ul. Świętojańskiej w Gdyni. Jak śpiewał Klenczon w &bdquo;Porcie&rdquo;: &bdquo;Mały jest ten świat.&rdquo; Autorka książki, pan prezes i ja &ndash; wszyscy mieszkamy w tym samym porcie, w tym samym, małym świecie.</p>
-                    <p>Bruderferajn &ndash; działalność nielegalna, ale składki dobrowolne.
-Bruderferajn funkcjonował w realiach działalności przestępczej. Naruszał przepisy Kodeksu Karnego II RP, m.in.:
--Art. 210 KK II RP (wymuszenia): &bdquo;Kto przemocą lub groźbą bezprawną zmusza drugiego człowieka do czynu, który miałby dla niego skutki prawne, podlega karze.&rdquo;
--Art. 282 KK II RP (oszustwa): &bdquo;Kto przez oszustwo wprowadza drugiego człowieka w błąd co do okoliczności mających znaczenie prawne, w celu osiągnięcia korzyści majątkowej lub innej, podlega karze.&rdquo;
--Art. 277 KK II RP (organizacja przestępcza): &bdquo;Kto przynależy do organizacji przestępczej, podlega karze.&rdquo;
-Jednak warto zaznaczyć, że w Bruderferajnie składki były dobrowolne, a ich celem była wzajemna pomoc członków w razie wypadków przy pracy, tymczasowego pobytu w więzieniu czy niespodziewanego końca kariery zawodowej. Składki miały funkcję quasi-ubezpieczeniową, nie były wymuszone.
-Można, co prawda, postawić zarzut z art. 283 KK II RP (nielegalna zbiórka publiczna), gdyby składki były pobierane na cele inne niż deklarowane. Ale w praktyce miały one charakter samopomocy &ndash; nie publicznej zbiórki.&nbsp;</p>
-                    <p>Gdyńskie NGO &apos;O&apos; &ndash; legalna forma, nielegalne praktyki.
-Współczesne organizacje pozarządowe, takie jak gdyńskie NGO &apos;O&apos;, działają na podstawie obowiązującego prawa &ndash; m.in. ustawy o stowarzyszeniach i ustawy o działalności pożytku publicznego. Składki członkowskie w takich organizacjach powinny być dobrowolne.
-W omawianym przypadku sytuacja wygląda inaczej. Składki nie były dobrowolne &ndash; pracownicy byli zmuszani do ich uiszczania pod groźbą utraty pracy. Działo się to mimo realizacji projektów finansowanych z budżetu państwa (część będąca w dyspozycji wojewody), środków MSWiA i UNHCR. Wymuszanie składek w takiej sytuacji jest nielegalne i stanowi ekonomiczne wymuszenie.
-Oto odpowiednie przepisy Kodeksu Karnego III RP:
--Art. 282 KK (wymuszenie rozbójnicze): &bdquo;Kto przemocą lub groźbą bezprawną zmusza drugiego człowieka do czynu, podlega karze.&rdquo;
--Art. 286 KK (oszustwo): &bdquo;Kto przez wprowadzenie w błąd w celu osiągnięcia korzyści majątkowej doprowadza inną osobę do niekorzystnego rozporządzenia mieniem, podlega karze.&rdquo;</p>
-                    <p>&nbsp;Porównanie: mafia i NGO.
-&bull;	Bruderferajn: działalność przestępcza, ale składki dobrowolne, z przeznaczeniem na solidarność wewnątrz organizacji.
-&bull;	Gdyńskie NGO &apos;O&apos;: formalnie legalna struktura, ale składki wymuszane na pracownikach pod groźbą utraty zatrudnienia. W dodatku w ramach projektów pomocowych dla cudzoziemców.
-Czyż nie jest to lustrzane odwrócenie moralności i prawa?</p> 
+                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">W Londynie trwa właśnie Swan Upping &ndash; coroczne liczenie łabędzi na Tamizie.  
+Rytuał z XIII wieku: czerwone mundury, herby na łodziach, królewski gest własności (dziś to Karol III).  Ale nie o monarchię chodzi, a o ekologię.  
+Ptaki są ważone, obrączkowane, opisywane. Dzieci klaszczą.  Londyn liczy łabędzie.&nbsp;</p> 
+                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">A w Gdańsku?
+Gdańsk kiedyś był inny. Nie tylko miejski, lecz alter miejski. W Stawach Królewskich, tam gdzie woda pachniała historią, łabędzie pływały spokojnie &mdash; a obywatele dobrze ubrani kupowali karneczki z datą ważności, by karmić nie chlebem z folii, lecz ziarnem z lnianej torby. Nie sypali jedzenia &mdash; składali je u brzegu.
+W Gdańsku to łabędzie liczyły ludzi.
+Niektórych więcej niż raz &ndash; bo przynosili prawdziwe jedzenie.  
+Nie spleśniały chleb z Biedronki. Nie chipsy w folii.  
+Przychodzili w deszczu, w grudniowy mróz, bez selfie-sticków, bez relacji live.
+Łabędzie znały tych, którzy próbowali chronić Motławę.  
+Tych, co przeganiali psy.  
+Tych, co odważyli się przegonić właścicieli psów.
+Ale z roku na rok było ich mniej.  
+Mniej ptaków. Mniej ludzi.  
+W końcu nie było już na kogo liczyć. 
+I nie było komu liczyć.</p>
+                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Odleciały.
+Może do Schwangau, gdzie w herbie łabędź, a na zamku duch Ludwika II.  
+Może do Brabancji, gdzie grają marsz weselny Wagnera &ndash;  
+którego dziś nie chcą słuchać, bo Wagner nie lubił Parady Równości,  
+która idzie przez współczesny Gdańsk.
+Może do Londynu, by dać się zważyć i wpisać do systemu.  
+Może do Wolnego Miasta Gdańska &ndash; którego już nie ma.  
+Ale to najdłuższy lot &ndash; i podjęli go tylko nieliczni.
+</p>
+                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">&nbsp;Na Dolnym Mieście zostały opakowania po chipsach,  
+psy z właścicielami,  których już nie da się odróżnić &ndash; kto pies, kto pan.  
+Między popękanymi wieżyczkami Śluzy  pływają kajaki i puste butelki po energetykach. I nikt już nie mówi:  &bdquo;Tam, przy moście, był łabędź. Duży, biały. Nie bał się ludzi.&rdquo;</p> 
                 </div>                 
                 <div class="article-actions"> 
                     <p><a href="#">[ Read on one page ]</a></p> 
