--- a/de/chronograf.html
+++ b/de/chronograf.html
@@ -13,8 +13,8 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&display=swap"> 
         <!-- External Stylesheets -->         
-        <link href="css/theme.css" rel="stylesheet" type="text/css"> 
-        <link href="css/section.css" rel="stylesheet" type="text/css"> 
+        <link href="../css/theme.css" rel="stylesheet" type="text/css"> 
+        <link href="../css/section.css" rel="stylesheet" type="text/css"> 
     </head>     
     <body> 
         <header> 
@@ -25,30 +25,30 @@
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/> 
                 </svg>                 
             </button>             
-            <!-- Header title and logo as a clickable link to index.html -->             <a href="index.html" class="header-link">  <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1>  </a> 
+            <!-- Header title and logo as a clickable link to index.html -->             <a href="../index.html" class="header-link">  <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1>  </a> 
         </header>         
         <nav class="main-nav"> 
             <ul> 
                 <li>
-                    <a href="stand.html">STANDPUNKT</a>
+                    <a href="../stand.html">STANDPUNKT</a>
                 </li>                 
                 <li>
-                    <a href="prawo.html">PRAWO</a>
+                    <a href="../prawo.html">PRAWO</a>
                 </li>                 
                 <li>
-                    <a href="lokalnie.html">LOKALNIE</a>
+                    <a href="../lokalnie.html">LOKALNIE</a>
                 </li>                 
                 <li>
-                    <a href="dobrze.html">DOBRZE NA DZIŚ</a>
+                    <a href="../dobrze.html">DOBRZE NA DZIŚ</a>
                 </li>                 
                 <li>
-                    <a href="notpl.html">OBYWATELE NIE PL</a>
+                    <a href="../notpl.html">OBYWATELE NIE PL</a>
                 </li>                 
                 <li>
-                    <a href="kartka.html">KARTKA Z HISTORII</a>
+                    <a href="../kartka.html">KARTKA Z HISTORII</a>
                 </li>                 
                 <li>
-                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                    <a href="./chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>                 
             </ul>             
         </nav>         
@@ -57,25 +57,25 @@
         <div id="offcanvas-menu"> 
             <ul> 
                 <li>
-                    <a href="stand.html">STANDPUNKT</a>
+                    <a href="../stand.html">STANDPUNKT</a>
                 </li>                 
                 <li>
-                    <a href="prawo.html">PRAWO</a>
+                    <a href="../prawo.html">PRAWO</a>
                 </li>                 
                 <li>
-                    <a href="lokalnie.html">LOKALNIE</a>
+                    <a href="../lokalnie.html">LOKALNIE</a>
                 </li>                 
                 <li>
-                    <a href="dobrze.html">DOBRZE NA DZIŚ</a>
+                    <a href="../dobrze.html">DOBRZE NA DZIŚ</a>
                 </li>                 
                 <li>
-                    <a href="notpl.html">OBYWATELE NIE PL</a>
+                    <a href="../notpl.html">OBYWATELE NIE PL</a>
                 </li>                 
                 <li>
-                    <a href="kartka.html">KARTKA Z HISTORII</a>
+                    <a href="../kartka.html">KARTKA Z HISTORII</a>
                 </li>                 
                 <li>
-                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                    <a href="./chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>                 
             </ul>             
         </div>         
