--- a/notpl.html
+++ b/notpl.html
@@ -45,7 +45,7 @@
                     <a href="kartka.html">KARTKA Z HISTORII</a>
                 </li>                 
                 <li>
-                    <a href="chrono.html">DANZIGER CHRONOGRAF</a>
+                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>                 
             </ul>             
         </nav>         
@@ -71,7 +71,7 @@
                     <a href="kartka.html">KARTKA Z HISTORII</a>
                 </li>                 
                 <li>
-                    <a href="chrono.html">DANZIGER CHRONOGRAF</a>
+                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>                 
             </ul>             
         </div>         
