--- a/kartka.html
+++ b/kartka.html
@@ -25,30 +25,23 @@
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/> 
                 </svg>                 
             </button>             
-            <!-- Header title and logo as a clickable link to index.html -->             <a href="index.html" class="header-link">  <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1>  </a> 
+            <!-- Header title and logo as a clickable link to index.html -->             <a href="index.html" class="header-link"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1> </a> 
         </header>         
         <nav class="main-nav"> 
             <ul> 
-                <li>
-                    <a href="stand.html">STANDPUNKT</a>
+                <li><a href="stand.html">STANDPUNKT</a>
                 </li>                 
-                <li>
-                    <a href="prawo.html">PRAWO</a>
+                <li><a href="prawo.html">PRAWO</a>
                 </li>                 
-                <li>
-                    <a href="lokalnie.html">LOKALNIE</a>
+                <li><a href="lokalnie.html">LOKALNIE</a>
                 </li>                 
-                <li>
-                    <a href="dobrze.html">DOBRZE NA DZIŚ</a>
+                <li><a href="dobrze.html">DOBRZE NA DZIŚ</a>
                 </li>                 
-                <li>
-                    <a href="notpl.html">OBYWATELE NIE PL</a>
+                <li><a href="notpl.html">OBYWATELE NIE PL</a>
                 </li>                 
-                <li>
-                    <a href="kartka.html">KARTKA Z HISTORII</a>
+                <li><a href="kartka.html">KARTKA Z HISTORII</a>
                 </li>                 
-                <li>
-                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li><a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>                 
             </ul>             
         </nav>         
@@ -56,26 +49,19 @@
         <div id="menu-overlay"></div>         
         <div id="offcanvas-menu"> 
             <ul> 
-                <li>
-                    <a href="stand.html">STANDPUNKT</a>
+                <li><a href="stand.html">STANDPUNKT</a>
                 </li>                 
-                <li>
-                    <a href="prawo.html">PRAWO</a>
+                <li><a href="prawo.html">PRAWO</a>
                 </li>                 
-                <li>
-                    <a href="lokalnie.html">LOKALNIE</a>
+                <li><a href="lokalnie.html">LOKALNIE</a>
                 </li>                 
-                <li>
-                    <a href="dobrze.html">DOBRZE NA DZIŚ</a>
+                <li><a href="dobrze.html">DOBRZE NA DZIŚ</a>
                 </li>                 
-                <li>
-                    <a href="notpl.html">OBYWATELE NIE PL</a>
+                <li><a href="notpl.html">OBYWATELE NIE PL</a>
                 </li>                 
-                <li>
-                    <a href="kartka.html">KARTKA Z HISTORII</a>
+                <li><a href="kartka.html">KARTKA Z HISTORII</a>
                 </li>                 
-                <li>
-                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li><a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>                 
             </ul>             
         </div>         
@@ -98,10 +84,10 @@
                 <p class="image-caption">To jest podpis pod obrazem, krótki i opisowy.</p> 
                 <div class="article-body"> 
                     <p style="font-family: 'Merriweather', serif; font-size: 14px;">Trójmiasto czyli Gdańsk, Sopot i Gdynia to jedno z najbardziej dynamicznych regionów w Polsce. Choć formalnie nie jest jednym miastem od lat funkcjonuje jako spójna całość pod względem komunikacyjnym gospodarczym i kulturalnym. Jak narodziła się idea Trójmiasta ?  Pomysł  połączenia trzech nadmorskich miast pojawił się tuż po II wojnie światowej kiedy odbudowa regionu wymagała zintegrowanego podejścia. W 1945 roku podjęto pierwsze próby administracyjnego scalenia Gdyni Sopotu i Gdańska ale nie udało się ich w pełni zrealizować. Jednak już wcześniej w czasie wojny miasta funkcjonowały jako wspólny organizm. Niemieckie władze zarządzały portami w Gdyni i Gdańsku jako jednym systemem a komunikacja publiczna była koordynowana na całym obszarze.</p> 
-                    <p>Pierwsze użycie nazwy Trójmiasto
+                    <p style="font-family: 'Merriweather', serif; font-size: 14px;">Pierwsze użycie nazwy Trójmiasto
 Chociaż faktyczna integracja administracyjna nigdy się nie wydarzyła, termin Trójmiasto zaczął się pojawiać w latach pięćdziesiątych XX wieku. W prasie po raz pierwszy użyto go w 1950 roku w Dzienniku Bałtyckim gdzie określano w ten sposób wspólne działania Gdańska Sopotu i Gdyni.
 Z czasem określenie to przyjęło się na stałe a mieszkańcy zaczęli je używać w odniesieniu do regionu. Już w latach sześćdziesiątych i siedemdziesiątych pojawiły się pierwsze instytucje działające pod tą nazwą takie jak Trójmiejski Park Krajobrazowy który objął tereny zielone w obrębie tych trzech miast.</p>
-                    <p>&nbsp;Trójmiasto jako organizm miejski
+                    <p style="font-family: 'Merriweather', serif; font-size: 14px;">&nbsp;Trójmiasto jako organizm miejski
 Choć formalnie Trójmiasto nie jest jednym miastem funkcjonuje jak metropolia dzięki wspólnej komunikacji kolej SKM i sieć autobusów łączy miasta w jeden spójny system. Zintegrowanej gospodarce porty w Gdańsku i Gdyni współpracują przyciągając międzynarodowy handel. Kulturze i edukacji mieszkańcy mogą korzystać z instytucji w całym Trójmieście niezależnie od miejsca zamieszkania.
  Czy Trójmiasto mogłoby stać się jednym miastem.
 Pomimo wielu prób Gdańsk Sopot i Gdynia nigdy nie zostały połączone administracyjnie W latach 1945-1946 planowano utworzenie jednej jednostki miejskiej ale sprzeciw Gdyni sprawił że pomysł upadł.
